--- a/BlazorDapperCrud8/BlazorDapperCrud8.csproj
+++ b/BlazorDapperCrud8/BlazorDapperCrud8.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4" />
+    <PackageReference Include="NetcodeHub.Packages.Components.Modal" Version="1.0.0" />
     <PackageReference Include="Radzen.Blazor" Version="4.30.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
